2003-03-09  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-preferences: Added options to change column visibility,
	no longer use seahorse_context_set_ascii_armor or seahorse_context_set_text_mode
	* seahorse-context: Removed use of gconf-client in favor of eel,
	removed ::set_ascii_armor and ::set_text_mode
	* seahorse-key-manager: Added disabled menu items for backup and
	generating a revocation certificate, also reorderd menu items
	* seahorse-import: OK not sensitive unless file exists or there is text
	* seahorse-ops-data: Updated ::import for when there are no keys imported

2003-03-08  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-properties: Bug fix when changing key, added tooltips,
	single user IDs don't have notebook, moved subkey buttons to own line
	* seahorse-key: Added ::get_fingerprint and ::get_id
	* seahorse-context: Updated to use seahorse_key_get_id,
	removed ::get_progress_update
	* seahorse-key-manager: Changed title as per bug #107411,
	use eel for preferences
	* seahorse-key-widget: Changed index property to accept up to GMAXUINT
	* seahorse-add-uid: OK not sensitive unless name length >= 5,
	don't check email address
	* seahorse-generate: OK not sensitive unless name length >= 5 and passphrase
	and confirmation aren't empty & match
	* seahorse-ops-key: ::add_uid doesn't check email, refined ::generate
	* seahorse-revoke: Changed title, added tooltips
	* seahorse-preferences: Added key manager tab
	* configure.in: Require eel-2.0
	* seahorse-key-store: Removed use of seahorse_context_get_progress_update
	* data/seahorse.schemas.in: Added column schemas
	* seahorse-key-manager-store: Shows columns based on preferences

2003-03-07  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-manager: Refined startup
	* seahorse-widget:
	* seahorse-key-widget:
	Removed ::new_component
	* seahorse-text-editor: No longer uses seahorse_widget_new_component
	* configure.in: Require gtk+-2.2