@@ -7,6 +7,8 @@ seahorse 0.7.2
 	* Key properties now a property window
 	* Owner trust values are restricted based on key type
 	* Key manager toolbar and column preferences
+	* General interface updates
+	* Nicer passphrase entry dialog
 
 seahorse 0.7.1
 --------------
