@@ -1,3 +1,11 @@
+2003-03-11  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* seahorse-context:
+	* main:
+	Moved gpgme_set_passphrase_cb from main to context::init
+	* seahorse-passphrase: Created glade file, updated function to use,
+	now prettier, addresses bug 107406
+
 2003-03-09  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse-preferences: Added options to change column visibility,
